<resources>
    <string name="app_name">MyNotesApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title">Title</string>
    <string name="dummy_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi tristique fermentum justo, vel ornare mi auctor vitae. Vestibulum metus justo, dictum ac nisi sit amet,</string>
    <string name="max">Max Length 256</string>
    <string name="save">Save</string>
    <string name="high">High</string>
    <string name="medium">Medium</string>
    <string name="low">Low</string>
    <string name="priority">Priority</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
</resources>
